infrastructure/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: observability
spec:
  selector:
    matchLabels:
      app: jaeger
  replicas: 1
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.52
          readinessProbe:
            httpGet:
              path: /
              port: 16686
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 5778
            - containerPort: 16686
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 14250

---

apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: observability
spec:
  type: ClusterIP
  ports:
    - name: serve-configs
      port: 5778
      targetPort: 5778
    - name: frontend
      port: 16686
      targetPort: 16686
    - name: opentelemetry-grpc
      port: 4317
      targetPort: 4317
    - name: opentelemetry-http
      port: 4318
      targetPort: 4318
    - name: protobuf
      port: 14250
      targetPort: 14250
  selector:
    app: jaeger
