infrastructure/ci-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${BRANCH}-backend
spec:
  selector:
    matchLabels:
      app: ${BRANCH}-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: ${BRANCH}-backend
    spec:
      containers:
        - name: ${BRANCH}-backend
          image: ${CONTAINER_REPO}:backend-${BRANCH}-${GITHUB_SHA}
          readinessProbe:
            httpGet:
              path: /health
              port: 1337
            initialDelaySeconds: 15
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 1337

---

apiVersion: v1
kind: Service
metadata:
  name: ${BRANCH}-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 1337
  selector:
    app: ${BRANCH}-backend

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ${BRANCH}-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ${BRANCH}-backend.api.viggo.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${BRANCH}-backend
            port:
              number: 80
