infrastructure/ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${BRANCH}-service
spec:
  selector:
    matchLabels:
      app: ${BRANCH}-service
  replicas: 1
  template:
    metadata:
      labels:
        app: ${BRANCH}-service
    spec:
      containers:
        - name: ${BRANCH}-service
          image: ${CONTAINER_REPO}:${BRANCH}-${GITHUB_SHA}
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: ${BRANCH}-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ${BRANCH}-service

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ${BRANCH}-service
spec:
  ingressClassName: nginx
  rules:
  - host: ${BRANCH}-service.api.viggo.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${BRANCH}-service
            port:
              number: 80
